RESOLVED FIXED 24151
Fix S60 (Qt) build break
https://bugs.webkit.org/show_bug.cgi?id=24151
Summary Fix S60 (Qt) build break
Laszlo Gombos
Reported 2009-02-24 18:43:43 PST
WebCore::unloadModule() is not implemented for the S60 (Qt) port. WebCore::unloadModule()should have the same implementation for the S60 Qt port as in all the non-mac and non-win ports. I would propose to create a default case and the S60 port (and possibly other non-win and non-mac ports) would just fall into the default case. Patch will follow.
Attachments
Create a default case for non-win and non-mac Qt builds (2.25 KB, patch)
2009-02-24 18:49 PST, Laszlo Gombos
hausmann: review+
Laszlo Gombos
Comment 1 2009-02-24 18:49:57 PST
Created attachment 27955 [details] Create a default case for non-win and non-mac Qt builds
Simon Hausmann
Comment 2 2009-03-04 06:21:56 PST
Comment on attachment 27955 [details] Create a default case for non-win and non-mac Qt builds Nice fix and cleanup!
Simon Hausmann
Comment 3 2009-03-04 06:22:30 PST
Landed in r41419, sorry for the long turnaround :(
Note You need to log in before you can comment on or make changes to this bug.