2009-02-24  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=24151
        Fix Qt/S60 build break

Canonical link: https://commits.webkit.org/33489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41419 268f45cc-cd09-0410-ab3c-d52691b4dbfc