WebCore/platform/FileSystem.h
@@ -97,9 +97,6 @@ const PlatformFileHandle invalidPlatformFileHandle = 0;
 #if defined(Q_WS_MAC)
 typedef CFBundleRef PlatformModule;
 typedef unsigned PlatformModuleVersion;
-#elif defined(Q_WS_X11) || defined(Q_WS_QWS) || defined(Q_WS_S60)
-typedef QLibrary* PlatformModule;
-typedef unsigned PlatformModuleVersion;
 #elif defined(Q_OS_WIN)
 typedef HMODULE PlatformModule;
 struct PlatformModuleVersion {
@@ -119,6 +116,9 @@ struct PlatformModuleVersion {
     }
 
 };
+#else
+typedef QLibrary* PlatformModule;
+typedef unsigned PlatformModuleVersion;
 #endif
 
 #else
