WebCore/platform/qt/FileSystemQt.cpp
@@ -143,32 +143,24 @@ int writeToFile(PlatformFileHandle handle, const char* data, int length)
     return 0;
 }
 
-#if defined(Q_WS_X11) || defined(Q_WS_QWS)
 bool unloadModule(PlatformModule module)
 {
+#if defined(Q_WS_MAC)
+    CFRelease(module);
+    return true;
+
+#elif defined(Q_OS_WIN)
+    return ::FreeLibrary(module);
+
+#else
     if (module->unload()) {
         delete module;
         return true;
     }
-
+                        
     return false;
-}
 #endif
-
-#if defined(Q_WS_MAC)
-bool unloadModule(PlatformModule module)
-{
-    CFRelease(module);
-    return true;
 }
-#endif
-
-#if defined(Q_OS_WIN)
-bool unloadModule(PlatformModule module)
-{
-    return ::FreeLibrary(module);
-}
-#endif
 
 }
 
